polish comparing constituents

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -1013,10 +1013,10 @@ First I discuss examples in which the internal and the external case match, and 
 
 Consider the example in \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case.
 The internal case and external case are accusative, as the predicate \tit{lubić} `to like' in both clauses takes accusative objects.
-The relative pronoun \tit{kogo} `\tsc{rel}.\tsc{acc}.\tsc{an}.\tsc{sg}' appears in the internal and external case: the accusative.
+The relative pronoun \tit{kogo} `\tsc{rel}.\tsc{acc}.\tsc{an}' appears in the internal and external case: the accusative.
 
 \exg. Jan lubi kogo -\tbf{kolkwiek} \tbf{Maria} \tbf{lubi}.\\
- Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{acc}.\tsc{an}.\tsc{sg} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
+ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
  `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-acc}
 
 Consider the example in \ref{ex:polish-dat-dat}, in which the internal dative case competes against the external dative case.
@@ -1025,7 +1025,7 @@ The external case is dative as well, as the predicate \tit{pomagać} `to help' a
 The relative pronoun \tit{them} `\ac{rel}.\ac{pl}.\ac{an}.\ac{dat}' appears in the internal and external case: the dative.
 
 \exg. Jan pomaga komu -\tbf{kolkwiek} \tbf{ufa}.\\
- Jan help.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{an}.\tsc{sg} ever trust.\tsc{3sg}\scsub{[dat]}\\
+ Jan help.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{an} ever trust.\tsc{3sg}\scsub{[dat]}\\
  `Jan helps whomever he trusts.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-dat}
 
 These findings can be summarized as in Table \ref{tbl:summary-polish-matching}. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The accusative marked in light gray corresponds to \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The dative marked in dark gray corresponds to \ref{ex:polish-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
@@ -1064,13 +1064,13 @@ The relative pronoun \tit{komu} `\ac{rel}.\ac{an}.\ac{dat}' appears in the inter
 The example adheres to the case scale, but the internal case is not allowed to surface when it wins the case competition. Therefore, the example is ungrammatical.
 
 \exg. *Jan lubi \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{an} ever tease.\tsc{3sg}\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat}
 
 The example in \ref{ex:polish-acc-dat-u} is identical to \ref{ex:polish-acc-dat}, except for that the relative pronoun appears in the external less complex accusative case. This example is also ungrammatical: the external case is less complex, and the external case is not allowed to surface when it wins the case competition.
 
 \exg. *Jan lubi kogo \tbf{-kolkwiek} \tbf{dokucza}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{acc}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{acc}.\tsc{an} ever tease.\tsc{3sg}\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-u}
 
 Now I turn to the situation in which the external case wins the competition, and there is no grammatical outcome possible, whichever case the relative pronoun appears in.
@@ -1081,13 +1081,13 @@ The relative pronoun \tit{komu} `\ac{rel}.\ac{an}.\ac{dat}' appears in the exter
 The example adheres to the case scale, but the external case is (as the internal case) not allowed to surface when it wins the case competition. Therefore, the example is ungrammatical.
 
 \exg. *Jan ufa komu \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{an}.\tsc{sg} ever let.\tsc{3sg}\scsub{[acc]} to home\\
+Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc}
 
 The example in \ref{ex:polish-dat-acc-u} is identical to \ref{ex:polish-dat-acc}, except for that the relative pronoun appears in the internal less complex accusative case. This example is also ungrammatical: the internal case is less complex, and the internal case is not allowed to surface when it wins the case competition.
 
 \exg. *Jan ufa \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{acc}.\tsc{an}.\tsc{sg} ever let.\tsc{3sg}\scsub{[acc]} to home\\
+Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-u}
 
 The two examples in which the accusative and the dative compete are highlighted in Table \ref{tbl:summary-polish-acc-dat}.
