--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -1,5 +1,12 @@
 %%%abbreviations%%%
 
+\DeclareAcronym{elh}{
+  short = \tsc{elh} ,
+  long  = extra light head ,
+  tag = abbr
+}
+
+
 \DeclareAcronym{int}{
   short = \tsc{int} ,
   long  = internal case ,
