--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -780,3 +780,10 @@
   year = {1994},
   pages = {41-109}
 }
+
+@book{swan2002,
+  title={A grammar of contemporary Polish},
+  author={Swan, Oscar E},
+  year={2002},
+  publisher={Slavica, Bloomington, Indiana}
+}
